@@ -26,6 +26,7 @@
   * Worked on reduced the memory usage of the FITS-IDI writer
   * Adjusted the TBW duration calculation to reflect that DP can output TBW twice as fast now
   * Changed the lsl.common.sdf and lsl.common.sdfADF to allow "flat" Projects and Sessions
+  * Fixed a problem triggering auto-copy in SDFs when not session comments are provided
 
 1.2.3
   * Fixed a problem with the conditional dependencies in setup.py for older versions of setuptools
